[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-flux-comfyui"
description = "ComfyUI nodes for Azure OpenAI Images (Flux)"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"} 
authors = [{ name = "Boris Chernetsov", email = "b.chernetsov@xpanceo.com" }]
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests>=2.28.0", "Pillow>=9.0.0", "torch>=1.12.0", "numpy>=1.21.0"]
keywords = ["ComfyUI", "Azure", "OpenAI", "Flux", "Images"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/xpanceo-team/azure-flux-comfyui"
Repository = "https://github.com/xpanceo-team/azure-flux-comfyui"
Issues = "https://github.com/xpanceo-team/azure-flux-comfyui/issues"
#  Used by Comfy Registry https://registry.comfy.org
"Bug Tracker" = "https://github.com/xpanceo-team/azure-flux-comfyui/issues"

[tool.comfy]
PublisherId = "bris557"
DisplayName = "azure-flux-comfyui"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

[tool.setuptools]
py-modules = ["azure_flux_node"]
